--- a/Pong.Api/appsettings.json
+++ b/Pong.Api/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "AllowedHosts": "*",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Slack": {
+    "AccessToken": "",
+    "AppToken": "",
+    "SigningSecret": ""
+  }
 }
