--- a/Pong.Api/Pong.Api.csproj
+++ b/Pong.Api/Pong.Api.csproj
@@ -11,7 +11,6 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
-        <PackageReference Include="SlackNet.AspNetCore" Version="0.12.2"/>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
@@ -19,6 +18,10 @@
         <Content Include="..\.dockerignore">
             <Link>.dockerignore</Link>
         </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Pong.Core\Pong.Core.csproj" />
     </ItemGroup>
 
 </Project>
